package com.ofdun.jobfinder.features.clients.ai.DTO;

public record OllamaRequest(String model, String input) {
}
